--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -18,6 +18,30 @@
     --mobile-font: 6px;
 }
 
+button {
+    background-color: var(--primary);
+    border: solid solid var(--primary);
+    padding: 6px 12px;
+    border-radius: 20px;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    box-shadow: 21px 35px 128px -5px rgb(0, 0, 7);
+}
+
+button a {
+    color: inherit;
+    text-decoration: none;
+}
+
+button:hover {
+    background-color: rgb(228, 228, 228);
+    color: var(--primary);
+}
+
 @font-face {
     font-family: 'Open Sans';
     src: url("../assets/OpenSans-VariableFont_wdth\,wght.ttf");
@@ -60,26 +84,84 @@ body {
     max-width: 100%;
 }
 
-header {
+Header {
     width: 100%;
     margin: 0 auto;
     position: fixed;
-    height: 10vh;
-    margin-top: 2rem;
+    height: 15vh;
+    /* margin-top: 2rem; */
+}
+
+#top {
+    transition: background-color 0.3s ease;
+}
+
+#top.scrolled {
+    background-color: #ffffff;
 }
 
 .nav {
     width: 90%;
-    height: 100%;
+    height: 60%;
     background-color: white;
     border: 2px solid transparent;
     border-radius: 80px;
-    box-shadow: 21px 35px 128px -25px rgb(0, 0, 7);
+    box-shadow: 21px 35px 128px -25px rgba(0, 0, 7);
     cursor: pointer;
-    margin: 0 auto;
+    margin: 20px auto;
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
+}
+
+.nav-link {
+    width: 25%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-right: 20px;
+}
+
+.dropdwn {
+    background-color: transparent;
+    color: var(--primary);
+}
+
+.dropdwn a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.dropdwn a svg {
+    margin-left: 6px;
+}
+
+.dropdown {
+    display: none;
+    position: absolute;
+    background: transparent;
+    min-width: 120px;
+    height: 100px;
+    /* box-shadow: 0 8px 16px 0 rgba(130, 130, 130, 0.2); */
+    z-index: 1;
+}
+
+.dropdwn-wrapper:hover .dropdown {
+    display: block;
+}
+
+.dropdown-button {
+    width: 100%;
+    border-radius: 6px;
+    background-color: var(--secondary);
+}
+
+.dropdown-button:first-child {
+    margin: 10px 0 16px 0;
 }
 
 header img {
@@ -254,30 +336,6 @@ header img {
     margin-top: 1rem;
 }
 
-button {
-    background-color: var(--primary);
-    border: solid solid var(--primary);
-    padding: 6px 10px;
-    border-radius: 20px;
-    color: #fff;
-    font-weight: bold;
-    cursor: pointer;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    box-shadow: 21px 35px 128px -5px rgb(0, 0, 7);
-}
-
-button a {
-    color: inherit;
-    text-decoration: none;
-}
-
-button:hover {
-    background-color: rgb(228, 228, 228);
-    color: var(--primary);
-}
-
 /* deliveryHero */
 .deliveryHero {
     width: 100%;
@@ -440,7 +498,7 @@ button:hover {
     width: 10%;
     height: 6vh;
     position: absolute;
-    right: 28%;
+    right: 25%;
     border-radius: 20px;
     background-image: linear-gradient(180deg, #ff8324, #b2572a);
     border: 1px solid var(--primary);
