--- a/web-app/src/Assets/styles/App.css
+++ b/web-app/src/Assets/styles/App.css
@@ -4,9 +4,10 @@
 
 * {
   font-family: "Montserrat", Tahoma, Geneva, Verdana, sans-serif;
-  box-sizing: "border-box";
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   line-height: 140%;
   letter-spacing: -2%;
 }
+
