--- a/web-app/src/Components/Sidebar/sidebar.css
+++ b/web-app/src/Components/Sidebar/sidebar.css
@@ -4,9 +4,10 @@
   height: 100vh;
   box-shadow: 4px 0 4px -2px rgba(0, 0, 0, 0.25);
 }
+
 .container main {
   width: 100%;
-  padding: 20px;
+  padding: 70px;
 }
 .container .sidebar {
   background: #ff8323;
@@ -16,20 +17,23 @@
 .top-section {
   display: flex;
   align-items: center;
-  padding: 55px 40px;
 }
 .link {
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: white;
-  padding: 20px 60px;
+  padding: 15px 50px;
   flex-direction: row-reverse;
   transition: all 0.5s;
   text-decoration: none;
   /* gap: 20px; */
 }
 
+.Logo {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
 
 .link:hover {
   background: white;
@@ -51,42 +55,47 @@
 }
 
 .profile-space:hover {
-  background: white;
   color: #ff8323;
   transition: all 0.5s;
 }
 
-.profile-link:hover{
+.profile-link:hover {
   color: #ff8323;
 }
 
-.sidebar-button{
+.sidebar-button {
   color: red;
   background-color: white;
   border-radius: 20px;
-  padding: 3px 8px;
+  padding: 10px 20px;
   cursor: pointer;
   border: 2px solid transparent;
 }
 
-.profile-space{
+.profile-space {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  margin-top: 3rem;
-  padding: 5px 40px;
+  padding: 20px 60px;
 }
 
-.profile-space span{
-  flex:1;
+.profile-space span {
   display: flex;
   flex-direction: column;
-  align-items:flex-start;
+  align-items: center;
+  width: 500px;
+  justify-content: center;
   margin-left: 0.5rem;
 }
 
-.profile-space a{
+.profile-link {
+  width: 200px;
+  display: flex;
+  justify-content: center;
+}
+
+.profile-space a {
   text-decoration: none;
   color: white;
 }
