--- a/web-app/src/Pages/login/login.css
+++ b/web-app/src/Pages/login/login.css
@@ -11,7 +11,7 @@
   color: #000;
   width: 100%;
   display: flex;
-  margin: 0;
+  
 }
 .arrowP {
   display: flex;
@@ -38,6 +38,13 @@
   top: 20%;
   left: 5%;
 }
+
+.login-right{
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+
 .login h1 {
   font-weight: 600;
   font-size: 32px;
@@ -63,30 +70,25 @@
 
 .login-input {
   display: flex;
+  width: 100%;
   gap: 10px;
   border-radius: 5px;
 }
 
 #login-username {
   border-radius: 10px;
-  padding: 0 0 0 10px;
   border: none;
   outline: none;
-}
-.password-input {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #fff;
-  padding-right: 10px;
-  border: none;
-  outline: none;
-  border-radius: 10px;
+  padding: 0 10px 0 10px;
 }
 
+
 #password {
-  padding: 0 0 0 10px;
+  padding: 0 10px 0 10px;
   border: none;
+  outline: none;
+  margin-top: 0;
+  border-radius: 10px;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
@@ -105,6 +107,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: baseline;
+  width: 300px;
 }
 
 .input-check input {
@@ -127,33 +130,52 @@
     height: 100vh;
     overflow-x: hidden;
     background-image: url("../../Assets/images/login-img.png");
-    position: relative;
+    
   }
 
   .backArrow {
     text-decoration: none;
     color: #fff;
-    width: 100px;
+    width: 100%;
     display: flex;
   }
+
+  .login-left {
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    width: 100%;
+    color: #db7002;
+    justify-content: flex-start;
+  }
+
+  
+
   .login-container {
-    /* position: absolute; */
+    
+    display: flex;
+    flex-direction: column;
     width: 90vw;
-    height: 80vh;
+    height: 90vh;
     align-items: center;
     justify-content: center;
     margin: 2.5rem auto;
     background-color: rgba(236, 236, 236, 1);
     border-radius: 20px;
     opacity: 0.85;
+  
   }
   .login-right {
     display: none;
   }
   .login-left main {
-    margin: 1rem 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem 2rem;
     max-width: 80%;
     max-height: 90vh;
+    padding: 0 30px 0 30px;
   }
   .login-left form {
     display: flex;
