--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -158,6 +158,7 @@ Header {
     padding: .5%;
     border: 2px solid transparent;
     border-radius: 10px 10px 20px 20px;
+    backdrop-filter: blur(10px);
 }
 
 .dropdwn-wrapper:hover .dropdown {
