--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -69,6 +69,33 @@ button:hover {
     box-shadow: 21px 35px 128px -5px rgb(0, 0, 7);
 }
 
+/* This is for the animation effects */
+
+.animation {
+    opacity: 0;
+    transform: translateY(calc(75% - 20px));
+    transition: all .7s ease-in-out 0s;
+    z-index: 0;
+}
+
+.scroll-animation {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.slide-in {
+    opacity: 0;
+    transform: translateX(calc(75% - 20px));
+    transition: all .7s ease-in-out 0s;
+    z-index: 0;
+}
+
+.slide-animation {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+
 .hero {
     width: 100%;
     min-height: 100vh;
@@ -107,6 +134,7 @@ Header {
 
 #top.scrolled {
     background-color: #ffffff;
+    z-index: 99;
 }
 
 .nav {
@@ -463,7 +491,7 @@ header img {
 /* membership container */
 .membership {
     width: 100vw;
-    min-height: 80vh;
+    min-height: 60vh;
     margin-top: 4rem;
 }
 
@@ -624,6 +652,20 @@ ul {
         width: 768px;
     }
 
+    /* This is for the animation effects */
+
+    .animation {
+        opacity: 0;
+        transform: translateY(20px);
+        transition: all .7s ease-in-out 0s;
+        z-index: 0;
+    }
+
+    .scroll-animation {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
     .hero {
         background-size: cover;
         min-width: 100vw;
@@ -736,7 +778,7 @@ ul {
     .showHero {
         margin: 0 auto;
         width: 90%;
-        min-height: 200px;
+        min-height: 400px;
     }
 
     .showHero-aside,
