--- a/web-app/src/Components/Sidebar/sidebar.css
+++ b/web-app/src/Components/Sidebar/sidebar.css
@@ -1,15 +1,20 @@
-.container {
+.sidebar {
   display: flex;
-  position: sticky;
+  flex-direction: column;
   height: 100vh;
   box-shadow: 4px 0 4px -2px rgba(0, 0, 0, 0.25);
+  width:230px ;
+  position: fixed;
+  top: 0;
+  transition: 0.1s ease-in;
+  
 }
 
-.container main {
+.sidebar main {
   width: 100%;
   padding: 70px;
 }
-.container .sidebar {
+.sidebar {
   background: #ff8323;
   color: white;
   min-height: 100%;
@@ -17,22 +22,20 @@
 .top-section {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .link {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   color: white;
   padding: 15px 50px;
-  flex-direction: row-reverse;
   transition: all 0.5s;
   text-decoration: none;
-  /* gap: 20px; */
 }
 
 .Logo {
-  margin-bottom: 20px;
-  margin-top: 20px;
+  width: 250px;
+  padding: 30px;
 }
 
 .link:hover {
@@ -43,6 +46,7 @@
 
 .icon {
   font-size: 22px;
+  margin-right: 20px;
 }
 
 .link-text {
@@ -98,4 +102,44 @@
 .profile-space a {
   text-decoration: none;
   color: white;
+}
+
+
+/* Add your existing styles for the sidebar here */
+
+/* Media query for screens with a width of 765px or less */
+@media (max-width: 1000px) {
+  .sidebar {
+    width: 0;
+    transition: width 0.2s ease-out;
+    overflow-x: hidden;
+  }
+
+  .sidebar.open {
+    width: 205px; /* Adjust the width as needed */
+    overflow-y: hidden;
+  }
+
+  .menu-icon {
+    display: block;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 1000;
+    color: black;
+  }
+
+  .menu-icon.open{
+    color: #ff8323;
+  }
+
+  .main-content {
+    transition: margin-left 0.3s ease-out;
+  }
+
+  .main-content.shift {
+    margin-left: 250px; /* Adjust the value to match the sidebar width */
+  }
 }
