--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -24,6 +24,19 @@
     src: url("../assets/OpenSans-VariableFont_wdth\,wght.ttf");
 }
 
+/* Define the animation */
+@keyframes text-reveal {
+    0% {
+        opacity: 0;
+        transform: translateY(50%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 * {
     font-family: "Open Sans", Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -130,11 +143,12 @@ Header {
 
 #top {
     transition: background-color 0.3s ease;
+    z-index: 99;
 }
 
 #top.scrolled {
     background-color: #ffffff;
-    z-index: 99;
+    /* z-index: 99; */
 }
 
 .nav {
@@ -220,7 +234,7 @@ header img {
 
 .hero-title {
     width: 75%;
-    margin: 15% 5% 0;
+    margin: 30vh 5% 0;
     color: white;
     text-align: left;
 }
@@ -239,6 +253,13 @@ header img {
     font-size: var(--subtitle);
     font-weight: 800;
     text-shadow: 2px 2px 20px hsla(0, 0%, 0%, 0.8);
+}
+
+/* hero-animation */
+.line-inner {
+    opacity: 0;
+    transform: translateY(100%);
+    animation: text-reveal 1000ms cubic-bezier(0.77, 0, 0.175, 1) forwards;
 }
 
 /* InfoHero Section */
@@ -550,7 +571,7 @@ header img {
     border-radius: 20px;
     background-image: linear-gradient(180deg, #ff8324, #b2572a);
     border: 1px solid var(--primary);
-    color: rgba(255, 255, 255, 0.212);
+    color: rgba(255, 255, 255, 0.75);
     font-weight: 700;
     font-size: var(--body);
     cursor: pointer;
@@ -649,7 +670,12 @@ ul {
 @media only screen and (max-width: 768px) {
     body {
         overflow-x: hidden;
-        width: 768px;
+        width: 100%;
+        /* min-width: max-content; */
+    }
+
+    #top {
+        z-index: 1;
     }
 
     /* This is for the animation effects */
@@ -668,46 +694,48 @@ ul {
 
     .hero {
         background-size: cover;
-        min-width: 100vw;
-        min-height: 1024px;
+        width: 100%;
+        min-height: 100%;
         /* object-fit: fill; */
     }
 
     .hero-inline {
-        min-height: calc(100% - 1rem);
+        position: relative;
+        min-height: calc(100% - 25%);
     }
 
     .hero-title {
-        margin: 30% calc(10% - 30px) 0;
-    }
-
-    .hero-title,
-    .hero-title h3 {
-        width: 90%;
+        position: absolute;
+        top: 10%;
+        z-index: 0;
         text-align: center;
     }
 
     .hero-title h1 {
-        font-size: 56px;
+        font-size: calc(100vw / 20);
+        width: 80%;
     }
 
     .hero-title h3 {
-        font-size: var(--header-4);
-        margin-left: 1.25rem;
+        font-size: calc(100vw / 25);
+        padding: 0;
+        margin-left: 0;
+        width: 80%;
+        /* margin-left: 1.25rem; */
     }
 
     .hero-button {
-        width: 100%;
+        width: 80%;
         z-index: 99;
         display: block;
-        margin: 2rem calc(40% - 5rem);
+        margin: 2rem calc(40vw - 5rem);
     }
 
     .hero-button-inner {
-        width: 45%;
+        width: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: flex-start;
     }
 
     .hero-button .dropdwn {
