--- a/web-app/src/Components/PrivacyHeroImg/PrivacyHeroImg.css
+++ b/web-app/src/Components/PrivacyHeroImg/PrivacyHeroImg.css
@@ -1,6 +1,6 @@
 /* .aboutheroimgPage { */
 
-    .hero-abimg {
+    .hero-img {
         background: rgba(255, 130, 34, 0.24); 
         /* rgba(255, 131, 34, 0.8) */
         height: 50vh;
@@ -9,9 +9,9 @@
         /* background-color: #FF8323; */
     }
 
-    .hero-abimg:before {
+    .hero-img:before {
         content: '';
-        background: url(../../Assets/images/heroimg.png) no-repeat center center/cover;
+        background: url(../../Assets/images/privatepolicy.jpg) no-repeat center center/cover;
         height: 100%;
         width: 100%;
         position: absolute;
@@ -20,7 +20,7 @@
         z-index: -1;
     }
 
-    .hero-abimg .heading {
+    .hero-img .heading {
         width: 100%;
         height: 100%;
         display: flex;
@@ -30,22 +30,21 @@
         align-items: center;
     }
  
-    .hero-abimg h1 {
+    .hero-img h1 {
         font-size: 3.4rem;
         border-bottom: 5px solid #fff;
     }
 
-    .hero-abimg p {
+    .hero-img p {
         font-size: 1.4rem;
     }
 
-
     @media screen and (max-width:640px) {
-        .hero-abimg h1 {
+        .hero-img h1 {
             font-size: 15rem;
         }
         
-        .hero-abimg {
+        .hero-img {
             background: rgba(0,0,0,.7);
             height: 30vh;
             width: 100%;
@@ -55,19 +54,13 @@
 
 
     @media screen and (max-width:640px) {
-        .hero-abimg h1 {
+        .hero-img h1 {
             font-size: 2rem;
         }
 
-        .hero-abimg {
+        .hero-img {
             background: rgba(0,0,0,.7);
             height: 30vh;
             width: 100%;
         }
     } 
-
-
-
-
-    
-
