--- a/web-app/src/Components/SecondSec/SecondSec.css
+++ b/web-app/src/Components/SecondSec/SecondSec.css
@@ -61,3 +61,48 @@
   flex-direction: column;
   justify-content: center;
 }
+
+
+
+@media screen and (max-width: 1140px) {
+  .secondContain {
+    border: 5px solid red;
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    margin: auto;
+    /* grid-template-columns: 2fr; */
+    /* margin: 5% 10% 5%; */
+  }
+
+  .Mimg {
+      width: 50%;
+      border-radius: 15px;
+      /* margin-left: 18% */
+      border: 5px solid red;
+   
+  }
+
+   .marketContainers {
+      color: black;
+      font-size: 23px;
+      font-size: 5px;
+  }
+
+  .marketContainers .marketP3 {
+    color: black;
+    font-size: 15px;
+    border: 5px solid red;
+  
+}
+
+
+
+
+  /* .about .left p {
+      color: black;
+      font-size: 20px;
+      margin: 1rem 0;
+  }  */
+
+}
