--- a/web-app/src/Pages/misc/Links/index.css
+++ b/web-app/src/Pages/misc/Links/index.css
@@ -37,3 +37,21 @@
     margin-right: 7%;
     padding: 40px;
 }
+
+
+@media only screen and (max-width: 767px) {
+    .about-us-container {
+      border-left: 2rem solid #FF8323;
+      border-right: 2rem solid #FF8323;
+      padding: 20px;
+    }
+  
+    .text-container h2 {
+      font-size: 24px;
+      line-height: 3rem;
+    }
+  
+    .text-container p {
+      font-size: 18px;
+    }
+  }
