--- a/web-app/src/Pages/dashboard/pages/profile/profile.css
+++ b/web-app/src/Pages/dashboard/pages/profile/profile.css
@@ -105,7 +105,6 @@
 
 .label {
   display: flex;
-  /* justify-content: center; */
   align-items: center;
   font-family: "Montserrat";
   font-style: normal;
@@ -140,10 +139,7 @@
 #photo,
 #fullName {
   border: 1px solid #a5a5a5;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
+ border-radius: 15px;
   height: 40px;
   width: 50%;
   display: flex;
@@ -151,24 +147,14 @@
   align-items: center;
   margin-top: 0;
 }
+#username,
+#website,
+#photo ::placeholder{
+  padding: 10px;
+}
 
-.vertical-line {
-  border: 1px solid #a5a5a5;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
-  height: 49px;
-  width: 15%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 0;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 10px;
-  line-height: 140%;
+.name::placeholder{
+  padding: 10px;
 }
 
 #kitchen-description {
