--- a/web-app/src/Components/ThirdSec/ThirdSec.css
+++ b/web-app/src/Components/ThirdSec/ThirdSec.css
@@ -1,14 +1,13 @@
 .ThirdSection {
   display: flex;
-  width: 100%;
-  margin-top: 50px;
-  padding-left: 50px;
+  width: 100vw;
+  padding: 50px;
+  gap: 100px;
 }
 .thirdsec {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .ThirdP1 {
@@ -37,11 +36,43 @@
   font-size: 18px;
   font-style: normal;
   font-weight: 500;
-  line-height: 25px; 
+  line-height: 25px;
   letter-spacing: 0.2px;
 }
 
-.mobimg{
-    width: 900px;
-    height: 700px;
+.mobimg {
+  width: 80vw;
+  height: 80vh;
+  margin-left: 0;
+  margin-top: 0;
+}
+
+
+@media screen and  (max-width: 768px){
+  .ThirdP2{
+    font-size: 20px;
+  }
+  .ThirdP3{
+    font-family: Montserrat;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0.1px;
+    width: 100%;
+    color: black;
+  }
+
+  .mobimg{
+    width: 50%;
+    border-radius: 15px;
+    height: auto;
+    margin-left: 0;
+    margin-top: 0;
+  }
+
+  .ThirdSection{
+    gap: 25px;
+
+  }
 }
