--- a/web-app/src/layouts/Navbar/navbar.scss
+++ b/web-app/src/layouts/Navbar/navbar.scss
@@ -5,7 +5,7 @@
     position: fixed;
     background: white;
     width: 100%;
-    height: 15px;
+    height: 75px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -19,9 +19,10 @@
 
   .large-e {
     object-fit: scale-down;
-    height: 20%;
-    width: 20%;
-    border: 5px solid red;
+    height: 50%;
+    width: 50%;
+    margin-top: 0;
+    margin-left: 0;
   }
 
   .btn-contained {
