--- a/web-app/src/Components/FifthSec/FifthSec.css
+++ b/web-app/src/Components/FifthSec/FifthSec.css
@@ -22,3 +22,13 @@
   margin-left: 0;
   margin-top: 0;
 }
+
+@media screen and (orientation: portrait) {
+  .FifthSection {
+    padding: 20px;
+  }
+  .data {
+    font-size: calc(4vw + 12px);
+    text-align: center;
+  }
+}
