--- a/web-app/src/Components/FourthSec/FourthSec.css
+++ b/web-app/src/Components/FourthSec/FourthSec.css
@@ -36,10 +36,24 @@
   padding-top: 0;
 }
 
-@media screen and (max-width: 768px){
+@media screen and (orientation: portrait) {
+  .FourthSection {
+    padding: 10px;
+    margin-top: 2rem;
+    gap: 0;
+  }
+
+  .FourthSection h2{
+    width: 100%;
+    font-size: calc(4vw + 10px);
+  }
+
   .FourthSection p{
     font-size: 15px;
     font-weight: 400;
-    line-height: 25px;
+    line-height: 20px;
+    text-align: left;
+    width: 100%;
+    padding: 15px;
   }
 }
