--- a/web-app/src/Components/SecondSec/SecondSec.css
+++ b/web-app/src/Components/SecondSec/SecondSec.css
@@ -63,18 +63,22 @@
   justify-content: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (orientation: portrait) {
   .secondContain {
-    gap: 25px;
-    
+    width: 90vw;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .secondP {
+    margin-bottom: -3rem;
+    padding: .5vw;
   }
 
   .Mimg {
-    width: 50%;
-    border-radius: 15px;
-    height: auto;
-    margin-left: 0;
-    margin-top: 0;
+    object-fit: contain;
+    margin-inline: calc(100vw / 16);
   }
 
   .marketContainers {
@@ -84,7 +88,8 @@
   }
 
   .marketP2{
-    font-size: 23px;
+    font-size: calc(4vw + 10px);
+    margin-bottom: .5rem;
   }
 
   .marketP3{
