--- a/web-app/src/layouts/Navbar/navbar.scss
+++ b/web-app/src/layouts/Navbar/navbar.scss
@@ -15,8 +15,8 @@
 
 
   .large-e {
-    object-fit: scale-down;
-    height: 50%;
+    object-fit: contain;
+    height: 20%;
     width: 120px;
     margin-top: 0;
     margin-left: 0;
@@ -90,7 +90,7 @@
 
     .hamburger {
       display: block;
-      margin-right: 30px;
+      margin-right: 10px;
      
     }
 
@@ -103,13 +103,14 @@
       left: -100%;
       text-align: center;
       width: 100%;
-      min-height: 1024px;
+      min-height: 100vh;
       transition: 0.5s;
       z-index: -1;
     }
 
     .nav-menu.active {
       left: 0;
+      overflow: hidden;
     }
 
     .nav-menu li {
@@ -125,6 +126,10 @@
       border: none;
       background-color: white;
       color: var(--primary);
+    }
+
+    ul li:last-child {
+      margin-left: 8vw;
     }
 
     .btn-outline {
