--- a/web-app/src/Components/FirstSec/FirstSec.css
+++ b/web-app/src/Components/FirstSec/FirstSec.css
@@ -55,6 +55,7 @@
   line-height: normal;
   letter-spacing: 0.8px;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 @media screen and (orientation: portrait) {
