--- a/web-app/src/Components/Table/orderTable.css
+++ b/web-app/src/Components/Table/orderTable.css
@@ -1,8 +1,13 @@
 .order-container{
+    width: 100%;
+    max-inline-size: 70vw;
     padding: 1rem;
+    margin-top: 2rem;
     display: flex;
     flex-direction: column;
     color: rgba(0, 0, 0, 0.713) ;
+    box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
 }
 
 .order-container h5{
