--- a/web-app/src/Components/FirstSec/FirstSec.css
+++ b/web-app/src/Components/FirstSec/FirstSec.css
@@ -1,5 +1,5 @@
 .FirstSection {
-  height: 80vh;
+  height: 751px;
   background: url("../../Assets/images/foods.png");
   background-size: cover;
   background-position: center;
@@ -10,18 +10,18 @@
   width: 100%;
   overflow-x: hidden;
   gap: 10px;
-  padding: 20px;
-  margin-bottom: 5%;
+  padding-bottom: 100px;
+  margin-bottom: 100px;
 }
 
 .heroP {
   font-family: Open Sans;
-  font-size: 2rem;
+  /* font-size: 2rem; */
   font-style: normal;
   font-weight: 700;
   line-height: normal;
   letter-spacing: -1.28px;
-  width: 90%;
+  /* width: 90%; */
   text-align: center;
   color: #fff;
 }
@@ -34,22 +34,22 @@
   color: #fff;
   text-align: center;
   font-family: Montserrat;
-  font-size: 1.5rem;
+  /* font-size: 1.5rem; */
   font-style: normal;
   font-weight: 700;
   line-height: normal;
   letter-spacing: -0.64px;
-  width: 90%;
+  /* width: 90%; */
 }
 
 .firstbtn {
   border-radius: 20px;
   border: 2px solid #fff;
   background: var(--primary, #ff8323);
-  padding: 15px 25px;
+  /* padding: 15px 25px; */
   color: #fff;
   font-family: Montserrat;
-  font-size: 1rem;
+  /* font-size: 1rem; */
   font-style: normal;
   font-weight: 800;
   line-height: normal;
@@ -58,7 +58,7 @@
 }
 
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .FirstSection {
     height: auto;
     padding: 10px;
@@ -76,5 +76,5 @@
 
   .firstbtn {
     padding: 10px 20px; /* Adjust padding for smaller screens */
-  }
-}
+  
+ 
