--- a/web-app/src/Components/PersonalForm/personalForm.css
+++ b/web-app/src/Components/PersonalForm/personalForm.css
@@ -2,6 +2,7 @@
   width: auto;
   height: 100vh;
   background-color: rgba(236, 236, 236, 1);
+  overflow-y: auto;
 }
 
 header h1 {
@@ -11,10 +12,9 @@ header h1 {
 .personal-form-main {
   display: flex;
   flex-direction: column;
-  /* justify-content:flex-start; */
   align-items: center;
   padding: 5%;
-  margin-top: 3rem;
+  margin-top: 2rem;
 }
 
 form {
@@ -35,25 +35,24 @@ form {
 .personal-form-input {
   display: flex;
   flex-direction: column;
-  justify-content: baseline;
   align-items: center;
   margin-top: 2rem;
-  width: 80%;
+  width: 75%;
 }
 
 .personal-form input,
 select {
-  margin-top: 1rem;
-  padding: 0.5%;
+  margin-top: 10px;
+  padding: 5px;
   width: 100%;
-  height: 4vh;
+  height: 35px;
   border-radius: 10px;
   border: 2px solid rgba(236, 236, 236, 1);
 }
 
 .personal-form select {
   height: 6vh;
-  width: 102%;
+  width: 100%;
 }
 
 form input::placeholder,
@@ -120,6 +119,13 @@ form .input-header {
   display: flex;
   width: 100%;
   flex-direction: column;
+  align-items: start;
+}
+.input-top2{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: end;
 }
 
 .input-top input {
