--- a/web-app/src/Components/FirstSec/FirstSec.css
+++ b/web-app/src/Components/FirstSec/FirstSec.css
@@ -1,6 +1,6 @@
 .FirstSection {
   height: 100vh;
-  background: url("../../Assets/images/foods.png");
+  background: url("../../Assets/images/foods.jpg");
   background-size: cover;
   background-position: center;
   display: flex;
