--- a/web-app/src/Components/AboutHeroImg/AboutHeroImg.css
+++ b/web-app/src/Components/AboutHeroImg/AboutHeroImg.css
@@ -11,7 +11,7 @@
 
     .hero-abimg:before {
         content: '';
-        background: url(../../Assets/images/heroimg.png) no-repeat center center/cover;
+        background: url(../../Assets/images/heroimg.webp) no-repeat center center/cover;
         height: 100%;
         width: 100%;
         position: absolute;
