--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -127,7 +127,7 @@ button:hover {
 #nav {
     /* transition: background-color 0.3s ease; */
     max-inline-size: 95%;
-    height: calc(10vh + 12px);
+    height: calc(8vh + 12px);
     margin: 1.5vw auto;
     background-color: white;
     border: 2px solid transparent;
@@ -138,7 +138,7 @@ button:hover {
 }
 
 .nav-inner {
-    width: 90%;
+    width: 95%;
     height: 100%;
     margin: 0 auto;
     display: flex;
@@ -154,6 +154,14 @@ button:hover {
     height: 15vw;
     object-fit: contain;
     margin-left: .5vw;
+}
+
+.nav-cta {
+    inline-size: 30vw;
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    gap: 5%;
 }
 
 .nav-link {
@@ -644,7 +652,8 @@ ul {
 
 @media screen and (orientation: portrait) {
     main {
-        display: block;
+        display: grid;
+        gap: calc(40vw + 12px);
     }
 
     button {
@@ -667,11 +676,36 @@ ul {
         border: 2px solid rgb(218, 218, 218);
     }
 
+    .nav-inner {
+        width: 80%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+    }
+
+    .nav-link {
+        display: none;
+    }
+
+    button a p {
+        font-size: var(--text-2);
+    }
+
+    .icon {
+        width: 35vw;
+    }
+
+    .icon img {
+        object-fit: cover;
+        width: 80%;
+        height: 80%;
+    }
+
     .nav-link {
         display: flex;
         flex-direction: row;
         align-items: center;
-        margin-right: 5vw;
     }
 
     .dropdown {
@@ -701,7 +735,7 @@ ul {
 
     .infoHero,
     .deliveryHero {
-        height: 100vh;
+        height: 45vh;
         margin-block: 2rem;
     }
 
@@ -731,7 +765,7 @@ ul {
 
     .shopHero {
         height: 70vh;
-        margin-block: 2rem;
+        /* margin-block: 2rem; */
     }
 
     .shopHero-container,
@@ -774,7 +808,7 @@ ul {
     }
 
     .deliveryHero {
-        height: 100vh;
+        height: 20vh;
         margin-block: 2rem;
         /* margin-bottom: 10rem; */
     }
@@ -795,19 +829,36 @@ ul {
 }
 
 @media screen and (min-width: 560px) and (max-width: 768px) {
+    #nav {
+        margin: 5vw auto;
+        max-inline-size: 90%;
+        height: 7vh;
+        box-shadow: 21px 35px 128px -25px rgba(0, 0, 7);
+        cursor: pointer;
+        border: 2px solid rgb(218, 218, 218);
+    }
+
     .hero-inline {
-        text-align: justify;
+        text-align: center;
     }
 
     .hero-content h1 {
         font-size: calc(8vw + 4px);
     }
 
+    .hero-content h3 {
+        width: 100%;
+    }
+
     .showHero {
-        margin-block: 4rem;
+        margin-block: 0rem;
     }
 
     .showHero-container {
-        margin-block-start: 24rem;
+        margin-block-start: 0rem;
+    }
+
+    .deliveryHero {
+        height: 40vw;
     }
 }
