--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -18,7 +18,7 @@
 
 @keyframes text-reveal {
     0% {
-        opacity: 0;
+        opacity: 0.5;
         transform: translateY(50%);
     }
 
@@ -33,7 +33,7 @@
 .animation {
     opacity: 0;
     transform: translateY(6px);
-    transition: all .7s ease-in-out 0s;
+    transition: all .1s ease-in-out 0s;
     z-index: 0;
 }
 
@@ -45,7 +45,7 @@
 .slide-in {
     opacity: 0;
     transform: translateX(calc(75% - 20px));
-    transition: all .7s ease-in-out 0s;
+    transition: all .1s ease-in-out 0s;
     z-index: 0;
 }
 
@@ -55,7 +55,7 @@
 }
 
 * {
-    font-family: "Montserrat", Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Montserrat", system-ui, sans-serif;
     margin: 0;
     padding: 0;
     line-height: 140%;
@@ -64,6 +64,7 @@
 body {
     -webkit-font-smoothing: antialiased;
     scroll-behavior: smooth;
+    scroll-snap-type: proximity;
 }
 
 main {
@@ -238,7 +239,7 @@ header img {
 .hero {
     height: calc(100vh + 10px);
     overflow-y: hidden;
-    background-image: url(./img/background.png), radial-gradient(var(--primary), var(--secondary));
+    background-image: url(https://ik.imagekit.io/0y99xuz0yp/img/background.png?updatedAt=1702610154410), radial-gradient(var(--primary), var(--secondary));
     background-size: cover;
     background-repeat: no-repeat;
     object-fit: contain;
@@ -265,7 +266,6 @@ header img {
 }
 
 .hero-content h1 {
-    font-family: "Montserrat";
     font-weight: bold;
     letter-spacing: -2%;
     text-shadow: 2px 2px 20px hsla(0, 0%, 0%, 0.8);
@@ -289,7 +289,7 @@ header img {
 .line-inner {
     opacity: 0;
     transform: translateY(100%);
-    animation: text-reveal 1000ms cubic-bezier(0.77, 0, 0.175, 1) forwards;
+    animation: text-reveal 500ms cubic-bezier(0.77, 0, 0.175, 1) forwards;
 }
 
 /* InfoHero Section */
